--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eslint-plugin-es5",
-  "version": "1.3.1",
+  "name": "eslint-plugin-flowspace-es5",
+  "version": "1.4.0",
   "description": "ESLint plugin for ES5 users.",
   "keywords": [
     "eslint",
